Modifique el index

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <section class="img-code">
                         <h1>SIAN</h1>
                         <h4>Sistema Integral Para La Administracion De Negocios</h6>
+                        <h1>prueba de cambios despues de subida a repo</h1>
                     </section>
                 </div>
             </div>
