Modificacion web parte 1

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
                     <div style="width:60%; position: relative;" class="text-box">
                         <h1 class="main-text">
                             <span>Nuestro cliente</span> mas
-                            <br>reciente es <br>Break Burger
+                            <br>reciente es <br>Break Burger 
                         </h1>
+                        <!---
                         <p class="sub-text">
                             Utilizando nuestro primer sistema
                             <a href="#"><b>SIAN</b></a> <br>(<b>S</b>istema <b>I</b>ntegral Para
                             La <b>A</b>dministracion De <b>N</b>egocios)
                         </p>
+                        -->
                         <div class="img-1">
                             <img src="img\fondo_index1.jpg">
                         </div>
@@ -52,11 +54,17 @@
             <div class="snap-section-2" style="background: #8d7d91;">
                 <div class="website-title">
                     <!--style="background: linear-gradient(rgb(0, 255, 170), rgba(255, 192, 203, 0.24));" -->
-                    <section class="img-code">
-                        <h1>SIAN</h1>
-                        <h4>Sistema Integral Para La Administracion De Negocios</h6>
-                        <h1>prueba de cambios despues de subida a repo</h1>
-                    </section>
+                    <div class="">
+                        <h1>Quienes somos?</h1>
+                        <h4>
+                            Somos un grupo de persona que desarrollan
+                            software para la administracion de negocios 
+                            a fin de poder controlar todos sus productos, 
+                                        ingresos y de mas.
+                        </h4>
+                        
+                        
+                        </div>
                 </div>
             </div>
         </div>
