--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg" style="background-color: #814fd3">
         <div class="container-fluid">
-            <a class="navbar-brand navbar-dark" href="index.html">CODERMEX</a>
+            <a class="navbar-brand navbar-dark" href="index.html">#CODERMEX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <svg xmlns="http://www.w3.org/2000/svg" height="2rem" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
@@ -86,11 +86,43 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown" style="left: 690px;">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                <path fill-rule="evenodd"
+                                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                            </svg> Iniciar sesión
+                        </a>
+                        <ul class="dropdown-menu" style="background-color: #faf9fc">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Usuario</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">ver</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </form>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="fondoo">
+        <p class="h4" style="text-align: center;color: rgba(255, 255, 255, 0.377);position: relative;top:30px">
+            BIENVENIDOS A #CODERMEX
+        </p>
     </div>
 
 </body>
