--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg" style="background-color: #814fd3">
         <div class="container-fluid">
-            <a class="navbar-brand navbar-dark" href="index.html">#CODERMEX</a>
+            <a class="navbar-brand navbar-dark" href="index.html">#JERE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <svg xmlns="http://www.w3.org/2000/svg" height="2rem" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
