--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles.scss" />
     <link rel="icon" href="logos\valorant.svg">
-    <!--<script src="script.js"></script>-->
+    <script src="script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -86,7 +86,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown" id="Login" style="left: 686px;">
+                    <li class="nav-item dropdown" id="Login">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
