--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown" id="Login">
+                    <li class="nav-item dropdown" id="Login" style="float: right;">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -96,25 +96,16 @@
                                     d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                             </svg> Iniciar sesión
                         </a>
-                        <ul class="dropdown-menu" id="menu_login" style="background-color: #faf9fc">
-                            <form>
-                                <div class="mb-3">
-                                    <li for="exampleInputEmail1" class="form-label">Usuario</li>
-                                    <input type="email" class="form-control" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1">
-                                </div>
-                                <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                    <label class="form-check-label" for="exampleCheck1">ver</label>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Registrar</button>
-                                <button type="submit" class="btn btn-primary">Iniciar</button>
-                            </form>
+                        <ul class="dropdown-menu" style="background-color: #faf9fc86">
+                            <li>Usuario</li>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <li>Contraseña</li>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <button type="submit" class="btn btn-primary">Registrar</button>
+                            <button type="submit" class="btn btn-primary">Iniciar</button>
                         </ul>
+
                     </li>
                 </ul>
             </div>
