--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                             </svg> Proyectos
                         </a>
                         <ul class="dropdown-menu" style="background-color: #faf9fc86">
+                            <!--
+                                dropdown: Despegable
+                                background: Fondo
+                            -->
                             <li><a class="dropdown-item" href="https://github.com/ProgramadorMLopez">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                         class="bi bi-github" viewBox="0 0 16 16">
@@ -86,29 +90,28 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown" id="Login" style="float: right;">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-person-circle" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                <path fill-rule="evenodd"
-                                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                            </svg> Iniciar sesión
-                        </a>
-                        <ul class="dropdown-menu" style="background-color: #faf9fc86">
-                            <li>Usuario</li>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <li>Contraseña</li>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                            <button type="submit" class="btn btn-primary">Registrar</button>
-                            <button type="submit" class="btn btn-primary">Iniciar</button>
-                        </ul>
-
-                    </li>
                 </ul>
             </div>
+
+            <!--
+            <a class="nav-link dropdown-toggle collapse navbar-collapse" id="navbarNavDropdown" href="#" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                    <path fill-rule="evenodd"
+                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                </svg> Iniciar sesión
+            </a>
+            <li class="dropdown-menu" id="menu_login" style="background-color: #faf9fc86">
+                <label>Usuario</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label>Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+                <button type="submit" class="btn btn-primary">Registrar</button>
+                <button type="submit" class="btn btn-primary">Iniciar</button>
+            </li>
+            -->
         </div>
     </nav>
     <div class="container-main">
