--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <!--ENCABEZADO-->
-    <nav class="navbar navbar-expand-lg" style="background-color: #814fd3">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand navbar-dark" href="index.html">#CODERMEX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -48,16 +48,7 @@
                             </svg> Historia
                         </a>
                     </li>
-                    <li class="nav-item border-end">
-                        <a class="nav-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-laptop" viewBox="0 1 16 16">
-                                <path
-                                    d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
-                            </svg> Servicios
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown border-end">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -90,6 +81,16 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item border-end">
+                        <a class="nav-link" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-laptop" viewBox="0 1 16 16">
+                                <path
+                                    d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
+                            </svg> Servicios
+                        </a>
+                    </li>
+
                 </ul>
             </div>
 
@@ -115,9 +116,18 @@
         </div>
     </nav>
     <div class="container-main">
-        <p class="h4" style="text-align: center;color: rgba(255, 255, 255, 0.377);position: relative;top:30px">
-            BIENVENIDOS A #CODERMEX
-        </p>
+        <div class="snap-section-1">
+            <div class="main">
+                <p class="h4" style="text-align: center;color: rgba(255, 255, 255, 0.377);position: relative;top:30px">
+                    BIENVENIDOS A #CODERMEX
+                </p>
+            </div>
+        </div>
+        <div class="snap-section-2">
+            <div>
+                <h1>sadasd</h1>
+            </div>
+        </div>
     </div>
 
 </body>
