--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codermex</title>
+    <title>#CODERMEX</title>
     <link href="http://fonts.cdnfonts.com/css/clash-display" ref="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
         ref="stylesheet">
@@ -115,17 +115,28 @@
             -->
         </div>
     </nav>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <div class="container-main">
         <div class="snap-section-1">
-            <div class="main">
-                <p class="h4" style="text-align: center;color: rgba(255, 255, 255, 0.377);position: relative;top:30px">
-                    BIENVENIDOS A #CODERMEX
-                </p>
+            <div class='content'>
+                <div class='visible'>
+                    <p>
+                        Hello
+                    </p>
+                    <ul>
+                        <li>world !</li>
+                        <li>(ﾉ^_^)ﾉ</li>
+                        <li>users !</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="snap-section-2">
-            <div>
-                <h1>sadasd</h1>
+            <div class="content-info">
+                <div id="span-1">
+                    <span>Desarrollo de softwares</span>
+                    <h2> ME LLAMO MARCOS LOPEZ, SOY ANALISTA IT. </h2>
+                </div>
             </div>
         </div>
     </div>
