--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
         <div class="snap-section-2">
             <div class="content-info">
                 <div id="span-1">
-                    <span>Desarrollo de softwares</span>
-                    <h2> ME LLAMO MARCOS LOPEZ, SOY ANALISTA IT. </h2>
+                    <span>Desarrollo de aplicaciones y web</span>
+                    <h2> ME LLAMO MARCOS LOPEZ, SOY
+                        IT DEVELOPER. </h2>
                 </div>
             </div>
         </div>
