--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         </div>
         <div class="snap-section-2">
             <div class="content-info">
-                <div id="span-1">
+                <div id="span-1" style="    font-size: 14px;">
                     <span>Desarrollo de aplicaciones y web</span>
-                    <h2> ME LLAMO MARCOS LOPEZ, SOY
+                    <h2> MI NOMBRE ES MARCOS LOPEZ, SOY
                         IT DEVELOPER. </h2>
                 </div>
             </div>
