--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="content-info">
                 <div id="span-1" style="    font-size: 14px;">
                     <span>Desarrollo de aplicaciones y web</span>
-                    <h2> MI NOMBRE ES MARCOS LOPEZ, SOY
+                    <h2> MI NOMBRE ES MARCOS LOPEZ,
                         IT DEVELOPER. </h2>
                 </div>
             </div>
