--- a/index.html
+++ b/index.html
@@ -133,10 +133,15 @@
         </div>
         <div class="snap-section-2">
             <div class="content-info">
-                <div id="span-1" style="    font-size: 14px;">
-                    <span>Desarrollo de aplicaciones y web</span>
-                    <h2> MI NOMBRE ES MARCOS LOPEZ,
-                        IT DEVELOPER. </h2>
+                <div class="row">
+                    <div class="vc-column center-col text-center">
+                        <div class="column-inner-wrapper">
+                            <span class="margin-five no-margin-top display-block letter-spacing-2">DESARROLLO DE
+                                APLICACIONES Y WEB</span>
+                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,
+                                IT DEVELOPER. </h2>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
