--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
                                 APLICACIONES Y WEB</span>
                             <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,
                                 IT DEVELOPER. </h2>
+                            <!--<p>Actualmente estoy trabajando como Analista IT en CNP Seguros una empresa
+                                francesa. Estoy hace 1 año y 5 meses. Anteriormente estuve trabajando como desarrollador
+                                de visual basic en SISTRAN. Lo que tiene en comun estas empresa es que son compañias de
+                                seguros.-->
+                            <p class="text-med width-90 center-col margin-seven no-margin-bottom">
+                                Codermex es mi
+                                proyecto mas grande hasta el dia de hoy
+                                donde quiero reflejar mis habilidades como full-stack developer.
+                                Como freelance, mis desarrollos actualmente son de
+                                aplicaiones de escritorio.
+                            </p>
+
                         </div>
                     </div>
                 </div>
