--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaiones de escritorio.
                             </p>
-
+                            <img src="img/Lobo.png">
                         </div>
                     </div>
                 </div>
