--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaiones de escritorio.
                             </p>
-                            <img src="img/Lobo.png">
+                            <img src="img/Lobo.png" style="height: 100px;
+                            width: 100px;">
                         </div>
                     </div>
                 </div>
