--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand navbar-dark" href="index.html">#CODERMEX</a>
+
+            <a class="navbar-brand navbar-dark" href="index.html"><img src="img/Lobo-blanco.png" style="height: 30px;
+                width: 30px;left:-4px;">CODERMEX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <svg xmlns="http://www.w3.org/2000/svg" height="2rem" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
@@ -124,9 +126,9 @@
                                 de visual basic en SISTRAN. Lo que tiene en comun estas empresa es que son compañias de
                                 seguros.-->
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
-                                Codermex es mi
-                                proyecto mas grande hasta el dia de hoy
-                                donde quiero reflejar mis habilidades como full-stack developer.
+                                Codermex es mi proyecto mas grande hasta el dia de hoy
+                                donde quiero reflejar mis habilidades que fui obtiendo a lo largo
+                                de mis experiencias laborales.
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaiones de escritorio.
                             </p>
