--- a/index.html
+++ b/index.html
@@ -134,10 +134,17 @@
                             </p>
                             <img src="img/Lobo.png" style="height: 100px;
                             width: 100px;">
+                            <p class="text-med width-90 center-col margin-seven no-margin-bottom">¿Te intere saber el
+                                codigo de la pagina WEB?</p>
+                            <button type="button" class="btn btn-outline-secondary"><a
+                                    href="https://github.com/ProgramadorMLopez/Codermex"></a>VER CODIGO</button></a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="snap-section-3">
+
         </div>
     </div>
 
