--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                             width: 100px;">
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">¿Te intere saber el
                                 codigo de la pagina WEB?</p>
-                            <button type="button" class="btn btn-outline-secondary"><a
-                                    href="https://github.com/ProgramadorMLopez/Codermex"></a>VER CODIGO</button></a>
+                            <a href="https://github.com/ProgramadorMLopez/Codermex"><button type="button"
+                                    class="btn btn-outline-secondary">VER CODIGO</button></a>
                         </div>
                     </div>
                 </div>
