--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaiones de escritorio.
                             </p>
+                            <p>&nbsp;</p>
                             <img src="img/Lobo.png" style="height: 100px;
                             width: 100px;">
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">¿Te intere saber el
