--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#CODERMEX</title>
+    <title>CODERMEX</title>
     <link href="http://fonts.cdnfonts.com/css/clash-display" ref="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
         ref="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <!--Conectamos css,boostrap,js-->
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles.scss" />
-    <link rel="icon" href="logos\valorant.svg">
     <script src="script.js"></script>
+    <!--icon para titulo-->
+    <link rel="icon" href="logos\valorant.svg">
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -26,7 +29,6 @@
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-
             <a class="navbar-brand navbar-dark" href="index.html"><img src="img/Lobo-blanco.png" style="height: 30px;
                 width: 30px;left:-4px;">CODERMEX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -59,7 +61,7 @@
                                     d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313ZM13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 5.698ZM14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13V4Zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 8.698Zm0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525Z" />
                             </svg> Proyectos
                         </a>
-                        <ul class="dropdown-menu" style="background-color: #faf9fc86">
+                        <ul class="dropdown-menu" style="background-color: #faf9fce0">
                             <!--
                                 dropdown: Despegable
                                 background: Fondo
@@ -97,7 +99,7 @@
         </div>
     </nav>
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
-    <div class="container-main">
+    <section class="container-main">
         <div class="snap-section-1">
             <div class='content'>
                 <div class='visible'>
@@ -121,10 +123,6 @@
                                 APLICACIONES Y WEB</span>
                             <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,
                                 IT DEVELOPER. </h2>
-                            <!--<p>Actualmente estoy trabajando como Analista IT en CNP Seguros una empresa
-                                francesa. Estoy hace 1 año y 5 meses. Anteriormente estuve trabajando como desarrollador
-                                de visual basic en SISTRAN. Lo que tiene en comun estas empresa es que son compañias de
-                                seguros.-->
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 Codermex es mi proyecto mas grande hasta el dia de hoy
                                 donde quiero reflejar mis habilidades que fui obtiendo a lo largo
@@ -138,7 +136,9 @@
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">¿Te intere saber el
                                 codigo de la pagina WEB?</p>
                             <a href="https://github.com/ProgramadorMLopez/Codermex"><button type="button"
-                                    class="btn btn-outline-secondary">VER CODIGO</button></a>
+                                    class="btn btn-outline-secondary btn-button">VER CODIGO</button></a>
+
+                            <!--highlight-button btn btn-small no-margin-right  hcode-button-6462b12f0b1df-->
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
         <div class="snap-section-3">
 
         </div>
-    </div>
+    </section>
 
 </body>
 
