--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                                 IT DEVELOPER. </h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 Codermex es mi proyecto mas grande hasta el dia de hoy
-                                donde quiero reflejar mis habilidades que fui obtiendo a lo largo
+                                donde quiero reflejar mis habilidades que fui obteniendo a lo largo
                                 de mis experiencias laborales.
                                 Como freelance, mis desarrollos actualmente son de
-                                aplicaiones de escritorio.
+                                aplicaciones de escritorio.
                             </p>
                             <p>&nbsp;</p>
                             <img src="img/Lobo.png" style="height: 100px;
