--- a/index.html
+++ b/index.html
@@ -100,12 +100,10 @@
     </nav>
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <section class="container-main">
-        <div class="snap-section-1">
+        <section class="snap-section-1">
             <div class='content'>
                 <div class='visible'>
-                    <p>
-                        Hello
-                    </p>
+                    <p> Hello </p>
                     <ul>
                         <li>world !</li>
                         <li>(ﾉ^_^)ﾉ</li>
@@ -113,41 +111,40 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="snap-section-2">
+        </section>
+        <section class="snap-section-2">
             <div class="content-info">
                 <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
-                            <span class="margin-five no-margin-top display-block letter-spacing-2">DESARROLLO DE
-                                APLICACIONES Y WEB</span>
-                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,
-                                IT DEVELOPER. </h2>
+                            <span class="margin-five no-margin-top display-block letter-spacing-2">
+                                DESARROLLO DE APLICACIONES Y WEB</span>
+                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,IT DEVELOPER.</h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 Codermex es mi proyecto mas grande hasta el dia de hoy
-                                donde quiero reflejar mis habilidades que fui obteniendo a lo largo
-                                de mis experiencias laborales.
+                                donde quiero reflejar mis habilidades que fui obteniendo
+                                a lo largo de mis experiencias laborales.
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaciones de escritorio.
-                                prueba
                             </p>
                             <p>&nbsp;</p>
-                            <img src="img/Lobo.png" style="height: 100px;
-                            width: 100px;">
-                            <p class="text-med width-90 center-col margin-seven no-margin-bottom">¿Te intere saber el
-                                codigo de la pagina WEB?</p>
-                            <a href="https://github.com/ProgramadorMLopez/Codermex"><button type="button"
-                                    class="btn btn-outline-secondary btn-button">VER CODIGO</button></a>
-
-                            <!--highlight-button btn btn-small no-margin-right  hcode-button-6462b12f0b1df-->
+                            <img src="img/Lobo.png" style="height: 100px; width: 100px;">
+                            <p class="text-med width-90 center-col margin-seven no-margin-bottom">
+                                ¿Te intere saber el codigo de la pagina WEB?</p>
+                            <a href="https://github.com/ProgramadorMLopez/Codermex"
+                                class="btn btn-outline-secondary btn-button">
+                                <span>VER CODIGO</span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="snap-section-3">
-
-        </div>
+        </section>
+        <section class="snap-section-3">
+            <div id="color_div_section_3">
+                <p>DEVELOPER WEB</p>
+            </div>
+        </section>
     </section>
 
 </body>
