--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body style="overflow: hidden;">
+<body class="body" style="overflow: hidden;">
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -61,7 +61,7 @@
                                     d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313ZM13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 5.698ZM14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13V4Zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 8.698Zm0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525Z" />
                             </svg> Proyectos
                         </a>
-                        <ul class="dropdown-menu" style="background-color: #faf9fce0">
+                        <ul class="dropdown-menu" style="background-color: #faf9fce0; font-size :20px">
                             <!--
                                 dropdown: Despegable
                                 background: Fondo
@@ -119,11 +119,11 @@
                         <div class="column-inner-wrapper">
                             <span class="margin-five no-margin-top display-block letter-spacing-2">
                                 DESARROLLO DE APLICACIONES Y WEB</span>
-                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ,IT DEVELOPER.</h2>
+                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, FRONTEND DEVELOPER.</h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 Codermex es mi proyecto mas grande hasta el dia de hoy
                                 donde quiero reflejar mis habilidades que fui obteniendo
-                                a lo largo de mis experiencias laborales.
+                                a lo largo de las capacitaciones que fui realizando.
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaciones de escritorio.
                             </p>
@@ -131,9 +131,8 @@
                             <img src="img/Lobo.png" style="height: 100px; width: 100px;">
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 ¿Te intere saber el codigo de la pagina WEB?</p>
-                            <a href="https://github.com/ProgramadorMLopez/Codermex"
-                                class="btn btn-outline-secondary btn-button">
-                                <span>VER CODIGO</span>
+                            <a href="https://github.com/ProgramadorMLopez/Codermex">
+                                <button class="raise">VER CODIGO</button>
                             </a>
                         </div>
                     </div>
@@ -142,8 +141,21 @@
         </section>
         <section class="snap-section-3">
             <div id="color_div_section_3">
-                <p>DEVELOPER WEB</p>
+                <p class="text-center" style="margin-bottom: 0rem">HABILIDADES</p>
             </div>
+            <div class="content-info">
+                <div class="row">
+                    <div class="vc-column center-col text-center">
+                        <div class="column-inner-wrapper">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--
+            <section class="middle">
+
+                <h1 class="watermark">Codermex</h1>
+            </section>-->
         </section>
     </section>
 
