Fondo de inicio

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
         </div>
     </nav>
+    <!--Termina encabezado-->
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <section class="container-main">
         <section class="snap-section-1">
