--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <section class="container-main">
         <section class="snap-section-1">
+            <!--<img src="img/Png/pngwing.com (18).png" alt="" height="200" width="200" style="top:150px; left: 250px;">-->
             <div class='content'>
                 <div class='visible'>
-                    <p> Hello </p>
+                    <p> Hola </p>
                     <ul>
-                        <li>world !</li>
+                        <li>Mundo !</li>
                         <li>(ﾉ^_^)ﾉ</li>
-                        <li>users !</li>
+                        <li>Usuarios !</li>
                     </ul>
                 </div>
             </div>
