textos de compañia actual

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <section class="container-main">
         <section class="snap-section-1">
-            <!--<img src="img/Png/pngwing.com (18).png" alt="" height="200" width="200" style="top:150px; left: 250px;">-->
             <div class='content'>
                 <div class='visible'>
                     <p> Hola </p>
@@ -121,13 +120,18 @@
                         <div class="column-inner-wrapper">
                             <span class="margin-five no-margin-top display-block letter-spacing-2">
                                 DESARROLLO DE APLICACIONES Y WEB</span>
-                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, FRONTEND DEVELOPER.</h2>
+                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, WEB DEVELOPER.</h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
-                                Codermex es mi proyecto mas grande hasta el dia de hoy
+                                <!--Codermex es mi proyecto mas grande hasta el dia de hoy
                                 donde quiero reflejar mis habilidades que fui obteniendo
-                                a lo largo de las capacitaciones que fui realizando.
+                                a lo largo de las pruebas y fallos trabajando en estos ultimos años.
                                 Como freelance, mis desarrollos actualmente son de
-                                aplicaciones de escritorio.
+                                aplicaciones de escritorio, hasta terminar de desarrollar mis
+                                habilidades como Web Developer.-->
+                                Codermex es una plataforma donde conoceran mi historia, mis experiencias
+                                laborales como desarrollador de software y web, habilidades, certificaciones
+                                mas destacados que fui obteniendo en distintos cursos intensivos
+                                y mis trabajos hasta la actualidad como freelance.
                             </p>
                             <p>&nbsp;</p>
                             <img src="img/Lobo.png" style="height: 100px; width: 100px;">
@@ -143,12 +147,23 @@
         </section>
         <section class="snap-section-3">
             <div id="color_div_section_3">
-                <p class="text-center" style="margin-bottom: 0rem">HABILIDADES</p>
+                <p class="text-center" style="margin-bottom: 0rem">Compañia Actual</p>
             </div>
             <div class="content-info">
                 <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
+                            <div class="text-company">
+                                <img src="img/Png/LOGO-CNP-web-1.png" alt="">
+                                <p>Actualmente estoy trabajando como Analista IT
+                                    en una empresa de seguros llamada CNP Assurances S.A
+                                    desde enero del 2022, realizando
+                                    Mantenimiento, mejoras y evolutivos
+                                    utilizando Visual Basic 6, SQL Server,
+                                    Reporting Services, Talend.
+                                </p>
+                            </div>
+                            <!--style="top:150px; left: 250px; border-radius: 100px;"-->
                         </div>
                     </div>
                 </div>
