Insertamos estilos al section-3

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="column-inner-wrapper">
                             <span class="margin-five no-margin-top display-block letter-spacing-2">
                                 DESARROLLO DE APLICACIONES Y WEB</span>
-                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, WEB DEVELOPER.</h2>
+                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, SOFTWARE DEVELOPER.</h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 <!--Codermex es mi proyecto mas grande hasta el dia de hoy
                                 donde quiero reflejar mis habilidades que fui obteniendo
@@ -128,9 +128,10 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaciones de escritorio, hasta terminar de desarrollar mis
                                 habilidades como Web Developer.-->
-                                Codermex es una plataforma donde conoceran mi historia, mis experiencias
-                                laborales como desarrollador de software y web, habilidades, certificaciones
-                                mas destacados que fui obteniendo en distintos cursos intensivos
+                                Codermex es una plataforma
+                                donde conoceran sobre mi, mis experiencias
+                                como desarrollador de software y web, habilidades, certificaciones
+                                mas destacados que fui obteniendo en distintos cursos que fui realizando
                                 y mis trabajos hasta la actualidad como freelance.
                             </p>
                             <p>&nbsp;</p>
@@ -150,21 +151,33 @@
                 <p class="text-center" style="margin-bottom: 0rem">Compañia Actual</p>
             </div>
             <div class="content-info">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
                             <div class="text-company">
                                 <img src="img/Png/LOGO-CNP-web-1.png" alt="">
                                 <p>Actualmente estoy trabajando como Analista IT
-                                    en una empresa de seguros llamada CNP Assurances S.A
+                                    en una compañia de seguros llamada CNP Assurances S.A
                                     desde enero del 2022, realizando
                                     Mantenimiento, mejoras y evolutivos
                                     utilizando Visual Basic 6, SQL Server,
-                                    Reporting Services, Talend.
+                                    Reporting Services y Talend.
                                 </p>
                             </div>
-                            <!--style="top:150px; left: 250px; border-radius: 100px;"-->
                         </div>
+                    </div>
+                </div>-->
+                <div class="vc-column column-izq">
+                    <div class="text-center">
+                        <span>CNP SEGUROS</span>
+                        <br>
+                        <p>Actualmente estoy trabajando como Analista IT
+                            en una compañia de seguros llamada CNP Assurances S.A
+                            desde enero del 2022, realizando
+                            mantenimiento, mejoras y evolutivos con la
+                            utilizacion de Visual Basic 6, SQL Server,
+                            Reporting Services y Talend.
+                        </p>
                     </div>
                 </div>
             </div>
